# wedding-planner

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
agent/: .env.example  Dockerfile  pyproject.toml  render.yaml
agent/evals/: dataset.json  run_evals.py
agent/knowledge/: budget_tips.md  etiquette.md  timeline.md
agent/wedding_agent/: __init__.py  db.py  graph.py  guardrails.py  rag.py  server.py  state.py  tools.py
agent/wedding_agent/static/: index.html
src/: App.tsx
src/components/auth/: ForgotPasswordForm.tsx  LoginForm.tsx  ProtectedRoute.tsx  ResetPasswordForm.tsx  SignupForm.tsx
src/components/budget/: BudgetCharts.tsx  BudgetOverview.tsx  CategoryList.tsx  ExpenseTable.tsx
src/components/chat/: ChatFab.tsx  ChatForm.tsx  ChatPanel.tsx
src/components/checklist/: ChecklistForm.tsx  ChecklistItem.tsx  ChecklistTimeline.tsx
src/components/dashboard/: ActivityFeed.tsx  CountdownTimer.tsx  QuickStats.tsx
src/components/guests/: CSVImport.tsx  GuestForm.tsx  (+2 more)
src/config/: supabase.ts
src/contexts/: AuthContext.tsx  ChatContext.tsx  WeddingContext.tsx
src/hooks/: useChat.ts  useSupabaseQuery.ts
src/lib/: chatClient.ts  formatters.ts  queryKeys.ts
src/pages/: BudgetPage.tsx  ChecklistPage.tsx  DashboardPage.tsx  GuestsPage.tsx  RsvpPage.tsx  SeatingPage.tsx  SettingsPage.tsx  VenuesPage.tsx
src/styles/: index.css
src/types/: database.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  002_venue_packages.sql  003_conversations.sql
(+33 files in other folders)
